[Presentation API] PresentationRequest should throw SecurityError for mixed contents

Make PresentationRequest consistent with latest spec. PresentationRequest::start(), reconnect() and getavailability() should throw SecurityError for mixed contents.

https://www.w3.org/TR/presentation-api/#dom-presentationrequest-start

BUG=657519

Review-Url: https://codereview.chromium.org/2432723003
Cr-Commit-Position: refs/heads/master@{#427433}

Former-commit-id: cd89f3ab381a7d9571e01a46a8a89d9318c31a46